<resources>
    <string name="app_name">TrabalhoFinal</string>
    <string name="default_notification_channel_id">id-messaging</string>
    <string name="salvar">Salvar</string>
    <string name="descricao">Descrição</string>
    <string name="data">Data</string>
    <string name="horario">Horário</string>
    <string name="endereco">Endereço</string>
    <string name="cep">CEP</string>
    <string name="evento">Evento</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_lista">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_evento">Add Evento</string>
    <string name="cancelar">Cancelar</string>
    <string name="telefone">Telefone</string>
    <string name="e_mail">E-mail</string>
    <string name="nascimento">Nascimento</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="abrir_mapa">Abrir Mapa</string>
    <string name="participar">Participar!</string>
    <string name="eventname">EventName</string>
    <string name="eventdesc">EventDesc</string>
    <string name="eventdate">EventDate</string>
    <string name="eventhour">EventHour</string>
    <string name="eventadre">EventAdre</string>
    <string name="voltar">Voltar</string>
    <string name="cadastro_de_usuario">Cadastro de Usuário</string>
    <string name="cadastro_de_evento">Cadastro de Evento</string>
    <string name="marcar_presenca">Marcar presença</string>
    <string name="proximos_eventos">Próximos eventos</string>
    <string name="sair">Sair</string>
</resources>