<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Join">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/headJoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marcar_presenca"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ptEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="24dp"
                android:text="@string/eventname"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ptEventDesc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="24dp"
                android:text="@string/eventdesc"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ptEventDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="24dp"
                android:text="@string/eventdate"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ptEventHour"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="24dp"
                android:text="@string/eventhour"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ptEventAdre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="24dp"
                android:text="@string/eventadre"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btJoinEvent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/participar" />

        <Button
            android:id="@+id/btOpenMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abrir_mapa" />

        <Button
            android:id="@+id/btLBackToList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voltar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>