<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/headEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_de_evento"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ptEventName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="Evento"
                android:hint="@string/evento"
                android:inputType="textPersonName|text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ptEventDesc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="Descrição"
                android:hint="@string/descricao"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ptEventDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="Data"
                android:ems="10"
                android:hint="@string/data"
                android:inputType="date|datetime" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ptEventHour"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="Horário"
                android:hint="@string/horario"
                android:inputType="time" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ptEventAdre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="Endereço"
                android:hint="@string/endereco"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ptEventCEP"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="CEP"
                android:ems="10"
                android:hint="@string/cep"
                android:inputType="textPostalAddress" />

        </LinearLayout>

        <Button
            android:id="@+id/btAddEvent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar" />

        <Button
            android:id="@+id/btBackToList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>