<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Usuario">

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/headUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_de_usuario"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ptUserName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="Nome"
                android:hint="@string/nome"
                android:inputType="textPersonName|text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ptUserPhone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="Telefone"
                android:hint="@string/telefone"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ptUserEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="E-mail"
                android:hint="@string/e_mail"
                android:inputType="textWebEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ptUserBirth"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="Nascimento"
                android:hint="@string/nascimento"
                android:inputType="datetime" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ptUserPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="Senha"
                android:hint="@string/senha"
                android:inputType="numberPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/btAddUser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar" />

        <Button
            android:id="@+id/btBackToLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>